--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,30 +1,4 @@
 <div class="form-container">
   <h1>Create book review</h1>
-  <%= form_for @book, url: books_path do |book| %>
-    <div class="form-group">
-      <%= book.label :title, 'Title:' %>
-      <%= book.text_field :title, class: 'form-control', :required => true %>
-    </div>
-    <div class="form-group">
-      <%= book.label :author, 'Author:' %>
-      <%= book.text_field :author, class: 'form-control', :required => true %>
-    </div>
-    <div class="form-group">
-      <%= book.label :cover, 'Cover:' %>
-      <%= book.file_field :cover, :required => true %>
-    </div>
-    <div class="form-group">
-      <%= book.label :description, 'Description:' %>
-      <%= book.text_area :description, class: 'form-control', :required => true %>
-    </div>
-    <div class="form-group">
-      <%= book.label 'Genres:' %>
-      <%= book.collection_select :genres, Genre.order(:title), :id, :title,
-               {include_blank: false, include_hidden: false},
-               {:multiple => true, class: 'form-control', :required => true} %>
-    </div>
-    <%= book.hidden_field :user_id, value: current_user.id %>
-    <%= book.submit 'Create', name: 'book[draft]', draft: false, class: 'btn btn-success' %>
-    <%= book.submit 'To drafts', name: 'book[draft]', draft: true, class: 'btn btn-primary' %>
-  <% end %>
+  <%= render partial: 'book_creation_form', locals: { book: @book, url: books_path } %>
 </div>
