--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,10 @@
         <ul class="nav navbar-nav">
           <% if user_signed_in? %>
             <li>
-              <%= link_to 'Create new book review', new_book_path  %>
+              <%= link_to 'Create new book review', new_book_path %>
+            </li>
+            <li>
+              <%= link_to 'My drafts', books_drafts_path %>
             </li>
           <% end %>
         </ul>
@@ -31,6 +34,9 @@
           <% else %>
             <li>
               <%= link_to('Login', new_user_session_path)  %>
+            </li>
+            <li>
+              <%= link_to('Sign up', new_user_registration_path)  %>
             </li>
           <% end %>
         </ul>
