Add books controller spec and changed book show template

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,5 +12,5 @@
     <% end %>
   </ul>
   <label>Short description:</label>
-  <%= text_area_tag 'description', @book.description, { size: '23x22', disabled: 'disabled' } %>
+  <div><%= @book.description %></div>
 </div>
