--- a/app/views/books/_book_creation_form.html.erb
+++ b/app/views/books/_book_creation_form.html.erb
@@ -19,14 +19,14 @@
     </div>
     <div class="form-group">
       <%= b.label :description, 'Description:' %>
-      <%= b.text_area :description, class: 'form-control', :required => true %>
+      <%= b.text_area :description, class: 'form-control', required: true %>
     </div>
     <div class="form-group">
       <%= b.label 'Genres:' %>
-      <%=select_tag 'book[genres]', options_for_select(
+      <%= select_tag 'book[genres]', options_for_select(
           Genre.order(:title).map {|g| [g.title, g.id]},
           book.genres.pluck(:id)
-      ), multiple: true, class: 'form-control'%>
+      ), multiple: true, class: 'form-control', required: true %>
     </div>
     <%= b.hidden_field :user_id, value: current_user.id %>
     <%= b.button 'Create', name: 'book[draft]', type: 'submit', value: 0, class: 'btn btn-success' %>
