--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
               <%= link_to 'Create new book review', new_book_path %>
             </li>
             <li>
-              <%= link_to 'My drafts', books_drafts_path %>
+              <%= link_to 'My drafts', drafts_books_path %>
             </li>
           <% end %>
         </ul>
